feature: update dependencies, remove redis, add maven-surefire-plugin